# Entregas-de-prog

./: .gitignore  404.html  README.md  index.html
Modulo_10/Semana_2/Backstage/: readme.md
Modulo_10/Semana_4/: Semana_4.sln  readme.md
Modulo_10/Semana_4/MetricDemo/: MetricDemo.csproj  Program.cs
Modulo_10/Semana_6/test_implementation/: .gitingore  readme.md
Modulo_10/Semana_8/: Readme.md
Modulo_10/Semana_8/backend/: Dockerfile  docker-compose.yml  package-lock.json  testConnection.js
Modulo_10/Semana_8/metrica-grafana-prometheus/: .gitignore
Modulo_10/Semana_8/prometheus/: prometheus.yml
Modulo_10/Semana_9/: .gitignore  readme.md
Modulo_10/Semana_9/EC2 com Terraform/: .gitignore  main.tf  mkdocs.yml  pyproject.toml
Modulo_10/Semana_9/EC2 com Terraform/docs/: index.md
Modulo_10/Semana_9/EC2 com Terraform/site/assets/javascripts/lunr/min/: lunr.no.min.js
Modulo_11/Semana_1/: analiseAutoestudo.R  analiseAutoestudo.Rmd  analiseAutoestudo.html
Modulo_11/Semana_2/ArquiteturaDeCloud/: ArquiteturaClud.md  Placeholder.md  readme.md
Modulo_11/Semana_3/: Placeholder.md  gitignore
Modulo_11/Semana_3/Pacote_Ingestão_de_Dados/: readme.md  setup.py
Modulo_12/Semana_1/: index.html  readme.md
Modulo_12/Semana_1/vr/: README.md  (+2 more)
Modulo_12/Semana_2/: readme.md
Modulo_12/Semana_3/: index.html  readme.md  reame.md
Modulo_9/Semana_10/: main.tf  readme.md
Modulo_9/Semana_7/: Semana_7.sln  teste_de_carga.md
Semana_4/Realizando análise de código estático com sonarqube/: readme.md
Semana_5/: readme.md
about/: index.html
search/: search_index.json
(+107 files in other folders)
