[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["naoassisto <99260189+naoassisto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
